--- a/backend_backup/admin-service/package.json
+++ b/backend_backup/admin-service/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "product-service",
+  "name": "admin-service",
   "version": "1.0.0",
   "description": "",
-  "keywords": [],
-  "license": "ISC",
-  "author": "",
-  "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "module",
   "dependencies": {
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
@@ -20,13 +20,9 @@
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
-    "minio": "^8.0.6",
-    "multer": "^2.0.2",
     "mysql2": "^3.16.0",
+    "nodemon": "^3.1.11",
     "sequelize": "^6.37.7",
     "uuid": "^13.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.11"
   }
 }
