--- a/backend_backup/order-service/.env
+++ b/backend_backup/order-service/.env
@@ -1,7 +1,6 @@
+PORT=5004
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=1234
-DB_NAME=ecom_products
-
+DB_PASS=1234
+DB_NAME=ecom_order
 JWT_SECRET=edhsxbjcoecnlkwxqoertye
-
