--- a/backend_backup/api-gateway/package.json
+++ b/backend_backup/api-gateway/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "http-proxy-middleware": "^3.0.5"
+    "form-data": "^4.0.5",
+    "http-proxy-middleware": "^3.0.5",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
