--- a/backend_backup/order-service/package.json
+++ b/backend_backup/order-service/package.json
@@ -15,12 +15,14 @@
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.0",
     "nodemon": "^3.1.11",
+    "razorpay": "^2.9.6",
     "sequelize": "^6.37.7",
     "uuid": "^13.0.0"
   }
