--- a/backend_backup/user-service/package.json
+++ b/backend_backup/user-service/package.json
@@ -18,6 +18,8 @@
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
+    "minio": "^8.0.6",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.11",
     "sequelize": "^6.37.7",
