--- a/backend_backup/api-gateway/package.json
+++ b/backend_backup/api-gateway/package.json
@@ -18,6 +18,7 @@
     "express": "^5.2.1",
     "form-data": "^4.0.5",
     "http-proxy-middleware": "^3.0.5",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2"
   },
   "devDependencies": {
