--- a/backend_backup/admin-service/package.json
+++ b/backend_backup/admin-service/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-     "start": "node server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
+    "ioredis": "^5.9.1",
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.0",
     "nodemon": "^3.1.11",
