--- a/backend_backup/product-service/package.json
+++ b/backend_backup/product-service/package.json
@@ -19,11 +19,13 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
+    "ioredis": "^5.9.1",
     "jsonwebtoken": "^9.0.3",
     "minio": "^8.0.6",
     "multer": "^2.0.2",
     "mysql2": "^3.16.0",
     "sequelize": "^6.37.7",
+    "sharp": "^0.34.5",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
